Start Simple Graph, create nodes: start_paly, baseball, soccer.

--- a/1-LangGraph Basics/simpleGraph.ipynb
+++ b/1-LangGraph Basics/simpleGraph.ipynb
@@ -1,23 +1,87 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9a307b1f",
+   "metadata": {},
+   "source": [
+    "### Build a Simple Workflow of Graph using LangGraph\n",
+    "\n",
+    "#### State\n",
+    "Firs, define the state of the graph.\n",
+    "\n",
+    "The state schema serves as the input schema for all nodes and Edges in the graph.\n",
+    "\n",
+    "Let's use the TypedDict class from python's typing module as our schema, which provide type hints for the keys."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6bcade5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "from typing_extensions import TypedDict\n",
+    "class State(TypedDict):\n",
+    "    graph_info: str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adacc685",
+   "metadata": {},
+   "source": [
+    "#### Nodes\n",
+    "Nodes are just python functions.\n",
+    "\n",
+    "The first positional argument is the state, as defined above.\n",
+    "\n",
+    "Beacuse the state is a TypedDict with schema as defined above, each node can access they key, graph_state, with state ['graph_state'].\n",
+    "\n",
+    "Each node returns a new value of the state key graph_state.\n",
+    "\n",
+    "By default, the new value returned by each node will override the prior state value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7467ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_play(state:State):\n",
+    "    print(\"Start_Play has been called\")\n",
+    "    return {\"graph_info\": state['graph_info'] + \"I am playing to play\"}\n",
+    "\n",
+    "def baseball(state:State):\n",
+    "    print(\"My Baseball node has been called\")\n",
+    "    return {\"graph_info\": state['graph_info'] + \" Baseball\"}\n",
+    "\n",
+    "def soccer(state:State):\n",
+    "    print(\"My Soccer node has been called\")\n",
+    "    return {\"graph_info\": state['graph_info'] + \" Soccer\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "55605ae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from typing import Literal\n",
+    "\n",
+    "def random_play(state:State)-> Literal['baseball', 'soccer']:\n",
+    "    graph_info = state['graph_info']\n",
+    "\n",
+    "    if random.random()>0.5:\n",
+    "        return 'baseball'\n",
+    "    else:\n",
+    "        return 'soccer'\n"
+   ]
   }
  ],
  "metadata": {
